test/js/node/test/parallel/test-stream-writable-change-default-encoding.js.log.txt
53 |   m.write('bar');
54 |   m.end();
55 | }());
56 | 
57 | // Change default encoding to invalid value.
58 | assert.throws(() => {
            ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
    code: 'ERR_UNKNOWN_ENCODING',
+   message: '[object Object]',
-   message: 'Unknown encoding: {}',
    name: 'TypeError'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-writable-change-default-encoding.js:58:8
      at native:11:43

Bun v1.1.31-debug+5fc53353f (macOS arm64)
